tests/rascal/negative/type_errors/L1/17_expression_ES10_D4_40.ob
MODULE Test17;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((+ ((z MOD 2) - (200 MOD 1223))) <= (((x - x) * (200 + 2)) MOD (+ (y DIV 2))));
               y := (+ (((+ z) MOD (x MOD z)) - ((y - 1223) - (z MOD z))));
               r := (~ (((y MOD y) - (x + 200)) < (+ (2 MOD z))));
               z := (- (((x * 2) DIV (0 MOD x)) * ((0 * 200) - (0 * 1))));
               r := (((- (200 * 1)) + ((200 + 200) DIV (1 - 2))) # (((200 - 1) + (- 200)) - ((z * 200) + (+ x))));
               r := ((((z * 200) MOD (200 DIV 0)) + (+ (200 - y))) # (((x * 1223) - (- z)) + ((- 0) * (1 MOD x))));
  (* error *)  r := ((((p - 200) # (- 1223)) & (~ (1223 < 1223))) OR (((1 MOD z) MOD (y - 2)) < (- (2 + y))));
               q := ((((1 MOD 2) MOD (- 1)) * (- (x - z))) < (- ((1223 * 2) + (x + 2))));
               z := (- ((+ (- y)) - (+ (x + 2))));
               x := ((((- y) * (- x)) + ((z MOD y) + (z - z))) MOD ((- (2 * 1223)) - ((z MOD 2) - (1223 * 2))))
END Test17.